<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/confirm"
        android:text="@string/are_you_sure"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <Button
        android:id="@+id/yes_button"
        android:text="@string/yes"
        android:layout_below="@+id/confirm"
        android:layout_marginTop="18dp"
        android:textColor="@color/cardview_light_background"
        android:background="#ff007e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:id="@+id/no_button"
        android:text="@string/no"
        android:layout_below="@+id/confirm"
        android:layout_marginTop="18dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/cardview_light_background"
        android:background="#ff007e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>
</RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>